# learning-stm32

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  setup.md  the_fifty_shades_of_blink.md  todo.txt  travis.yml
config/: cmsis.mk  common.mk  freertos.mk  opencm3.mk  stm32_cubef1.mk  stm32_std_periph.mk
examples/blink/: Makefile  variations.md
examples/blink/with_arduino/: main.c  readme.md
examples/blink/with_cmsis/: Makefile  defs.mk  link_script.ld  main.c  readme.md  startup.s
examples/blink/with_freertos/: Makefile  defs.mk  readme.md
examples/blink/with_freertos_opencm3/: Makefile  defs.mk  main.c
examples/blink/with_no_deps/: Makefile  defs.mk  linker_script.ld  main.c  readme.md
examples/blink/with_opencm3/: Makefile  cortex-m-generic.ld  defs.mk  main.c  readme.md  stm32f103x8.ld
examples/blink/with_stm32_cubef1/: Makefile  STM32F103X6_FLASH.ld  defs.mk  main.c  readme.md  startup_stm32f103x6.s  stm32f1xx_it.c
examples/blink/with_stm32_std_periph/: Makefile  defs.mk  main.c  readme.md  startup_stm32f10x_md.s  stm32_flash.ld
ld/: startup_stm32f10x_md.s
libs/: Makefile
libs/STM32CubeF1_V1.8.0/: Makefile  README.md  defs.mk
libs/STM32CubeF1_V1.8.0/Drivers/CMSIS/Device/ST/STM32F1xx/Source/Templates/gcc/: startup_stm32f103x6.s
libs/STM32CubeF1_V1.8.0/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_conf.h
libs/STM32F10x_StdPeriph_Lib_V3.5.0/: CMakeLists.txt  Makefile  defs.mk  readme.md
libs/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/CoreSupport/: core_cm3.c
utils/: get-size.sh
(+1 files in other folders)
